# nixops-hetzner

./: default.nix  pyproject.toml
ci/: check-mypy.sh
nixops_hetzner/: plugin.py
nixops_hetzner/backends/: server.py
