[tool.poetry]
name = "nixops_hetzner"
version = "1.0"
description = "NixOps plugin for Hetzner"
authors = ["NixOS contributors"]
license = "MIT"
include = [ "nixops_hetzner/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
nixops = { git = "https://github.com/NixOS/nixops.git", rev = "bc67d704f12a55f9708f66613698263a37964a36" }
hetzner = "0.8.2"

[tool.poetry.dev-dependencies]
nose = "^1"
black = "19.10b0"

[tool.poetry.plugins."nixops"]
hetzner = "nixops_hetzner.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
