[tool.poetry]
name = "nixops_hetzner"
version = "1.0"
description = "NixOps plugin for Hetzner"
authors = ["NixOS contributors"]
license = "MIT"
include = [ "nixops_hetzner/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
nixops = { git = "https://github.com/NixOS/nixops.git", rev = "10413544c0676b66e3687e844b6ff88bfcba8438" }
hetzner = "0.8.2"

[tool.poetry.dev-dependencies]
nose = "^1"
black = "19.10b0"
mypy = "^0.790"

[tool.poetry.plugins."nixops"]
hetzner = "nixops_hetzner.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
